--- a/en/index.html
+++ b/en/index.html
@@ -51,11 +51,11 @@
         <li><a href=""></a></li>
         <li><a href="../en/about.html">About</a></li>
         <li><a href="../en/city.html">City</a></li>
-        <li><a href="../en/schedule.html">Schedule</a></li>
+        <!--<li><a href="../en/schedule.html">Schedule</a></li>
         <li><a href="../en/talks.html">Talks</a></li>
         <li><a href="../en/poster_en.html">Posters</a></li>
         <li><a href="../en/workshop.html">Workshop</a></li>
-        <li><a href="../en/scholarship.html">Scholarship</a></li>
+        <li><a href="../en/scholarship.html">Scholarship</a></li>-->
     </ul>
 
     <ul id="dropdown4" class="dropdown-content">
@@ -75,7 +75,7 @@
         <div class="nav-wrapper container"><a id="logo-container" href="../en/index.html" class="brand-logo"><em>Bayes</em></a>
             <ul class="right hide-on-med-and-down">
             <li><a class="dropdown-button" href="#!" data-target="dropdown2">We are<i class="material-icons right">arrow_drop_down</i></a></li>
-            <li><a class="dropdown-button" href="#!" data-target="dropdown3">Congress<i class="material-icons right">arrow_drop_down</i></a></li>
+            <li><a class="dropdown-button" href="#!" data-target="dropdown3">Events<i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a class="dropdown-button" href="#!" data-target="dropdown4">Virtual<i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a class="dropdown-button" href="#!" data-target="dropdown5">Contact<i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a href="../en/music.html">Music</a></li>
@@ -92,14 +92,14 @@
         <!--<li><a href="../en/organiza_en.html">&#x2022; Organizers</a></li>-->
         <li><a href="../en/community.html">&#x2022; Community</a></li>
         <li><a href="../en/music.html">&#x2022; Music</a></li>
-        <li><a href="">CONGRESS:</a></li>
+        <li><a href="">Events:</a></li>
         <li><a href="../en/about.html">&#x2022; About</a></li>
         <li><a href="../en/city.html">&#x2022; City</a></li>
-        <li><a href="../en/schedule.html">&#x2022; Schedule</a></li>
+        <!--<li><a href="../en/schedule.html">&#x2022; Schedule</a></li>
         <li><a href="../en/talks.html">&#x2022; Talks</a></li>
         <li><a href="../en/poster.html">&#x2022; Posters</a></li>
         <li><a href="../en/workshop.html">&#x2022; Workshop</a></li>
-        <li><a href="../en/scholarship.html">&#x2022; Scholarship</a></li>
+        <li><a href="../en/scholarship.html">&#x2022; Scholarship</a></li>-->
         <li><a href="">VIRTUAL:</a></li>
         <li><a href="../en/seminar.html">&#x2022; Seminar</a></li>
         <!--<li><a href="../en/hackathon.html">&#x2022; Hackathon</a></li>-->
@@ -120,7 +120,7 @@
         <div class="section no-pad-bot" id="index-banner">
             <div class="container">
             <br><br>
-            <div class="center"><img class="responsive-img" src="logos/PB.svg" alt="logo_unsl" style="width: 90%;"></a>
+            <div class="center"><img class="responsive-img" src="../logos/PB.svg" alt="logo_unsl" style="width: 90%;"></a>
             <h5 class="header col s12 light"><b>Intersubjective agreements in contexts of uncertainty</b></h5>
             <h6 class="header col s12 light">Promoting Bayesian communities in Latin America, the Caribbean, and the peoples of the Global South. Despite the fact that knowledge under uncertainty is "plural and conditional," colonial-modern science and politics have presented themselves as "singular and definitive". The scientific, cultural, and ecological transition in favor of plurality is going to happen.</h6>
             </div>
@@ -140,62 +140,60 @@
 
         <div class="figcontainer" style="align-items: center;">
             <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%; margin-bottom: 4%;">
-            <a href="https://nodosde.gob.ar/"><img class="responsive-img" src="logos/NODOSdE.png" alt="NODO"></a>
+            <a href="https://nodosde.gob.ar/"><img class="responsive-img" src="../logos/UNSa.png" alt="UNSa"></a>
             </div>
 
-            <div class="figure" style="flex: 0.2; margin-right: 6%;margin-left: 6%">
-            <a href="http://turnos.sde.gob.ar/secitec/"><img class="responsive-img" src="logos/secretariaSE.png" alt="secretaría Santiago"></a>
+            <div class="figure" style="flex: 0.33; margin-right: 6%;margin-left: 6%">
+            <a href="http://turnos.sde.gob.ar/secitec/"><img class="responsive-img" src="../logos/khipu.jpg" alt="khipu"></a>
             </div>
         </div>
-
+<!--
         <div class="figcontainer" style="align-items: center;">
             <div class="figure" style="flex: 0.35;">
-            <a href="https://www.fcecon.unr.edu.ar/seccion/facultad/escuela-de-estadistica"><img class="responsive-img" src="logos/logo-UNR.jpg" alt="logo_unr"></a>
+            <a href="https://www.fcecon.unr.edu.ar/seccion/facultad/escuela-de-estadistica"><img class="responsive-img" src="../logos/logo-UNR.jpg" alt="logo_unr"></a>
             </div>
 
             <div class="figure" style="flex: 0.3; margin-left: 4%">
-            <a href="https://www.routledge.com/"><img class="responsive-img"  src="logos/CRC.jpg" alt="CRC"></a>
+            <a href="https://www.routledge.com/"><img class="responsive-img"  src="../logos/CRC.jpg" alt="CRC"></a>
             <!--<figcaption>Evaluación bayesiana</figcaption>-->
             </div>
-        </div>
+        </div>-->
 
 
         <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.26;margin-right: 2%;margin-left: 2%">
-            <a href="https://github.com/PythonNorte"><img class="responsive-img" src="logos/pythonNorte.jpg" alt="Figure 1"></a>
+            <div class="figure" style="flex: 0.28; margin-right: 6%;margin-left: 0%">
+            <a href="https://www.s-a-e.org.ar/"><img class="responsive-img" src="../logos/sae.jpeg" alt="logo_unr"></a>
             <!--<figcaption>Regresión bayesiana</figcaption>-->
             </div>
 
-            <div class="figure" style="flex: 0.3">
-            <img class="responsive-img" src="logos/redPublicas.jpg" alt="Figure 2">
+            <div class="figure" style="flex: 0.26;margin-right: 2%;margin-left: 2%">
+            <a href="https://github.com/PythonNorte"><img class="responsive-img" src="../logos/pythonNorte.jpg" alt="Python Norte"></a>
             </div>
         </div>
 
 
 
-        <div class="figcontainer" style="align-items: center;">
+       <!-- <div class="figcontainer" style="align-items: center;">
             <div class="figure" style="flex: 0.26;margin-right: 3%;margin-left:     8%">
-            <img class="responsive-img" src="logos/lujan.jpg" alt="Figure 2">
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
+            <img class="responsive-img" src="../logos/lujan.jpg" alt="Figure 2">
             </div>
 
             <div class="figure" style="flex: 0.3; margin-right: 6%;margin-left: 6%">
-            <a href="https://www.s-a-e.org.ar/"><img class="responsive-img" src="logos/sae.jpeg" alt="logo_unr"></a>
+            <a href="https://www.s-a-e.org.ar/"><img class="responsive-img" src="../logos/sae.jpeg" alt="logo_unr"></a>
             </div>
-        </div>
+        </div>-->
 
         <br>
         <br>
 
-        <div class="figcontainer" style="align-items: center;">
+        <!--<div class="figcontainer" style="align-items: center;">
             <div class="figure" style="flex: 0.33;">
             <a href="https://metodosbayesianos.github.io/"><img class="responsive-img" src="https://raw.githubusercontent.com/MetodosBayesianos/static/3f0ec047b6425164c18ba2f35333a15574de5975/logos/LMB.svg" alt="Metodos"></a>
             </div>
             <div class="figure" style="flex: 0.3; margin-left: 4%;margin-bottom: 4%;">
-            <a href="https://www.routledge.com/"><img class="responsive-img"  src="logos/sadosky.jpg" alt="sadosky"></a>
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
+            <a href="https://www.routledge.com/"><img class="responsive-img"  src="../logos/sadosky.jpg" alt="sadosky"></a>
             </div>
-        </div>
+        </div>-->
 
         <br>
 
