--- a/navega_es.html
+++ b/navega_es.html
@@ -49,11 +49,11 @@
         <li><a href=""></a></li>
         <li><a href="../es/descripcion.html">Descripción</a></li>
         <li><a href="../es/ciudad.html">Ciudad</a></li>
-        <li><a href="../es/cronograma.html">Cronograma</a></li>
+        <!--<li><a href="../es/cronograma.html">Cronograma</a></li>
         <li><a href="../es/charlas.html">Charlas</a></li>
         <li><a href="../es/poster.html">Posters</a></li>
         <li><a href="../es/taller.html">Taller</a></li>
-        <li><a href="../es/becas.html">Becas</a></li>
+        <li><a href="../es/becas.html">Becas</a></li>-->
     </ul>
 
     <ul id="dropdown4" class="dropdown-content">
@@ -73,7 +73,7 @@
         <div class="nav-wrapper container"><a id="logo-container" href="../es/index.html" class="brand-logo"><em>Bayes</em></a>
         <ul class="right hide-on-med-and-down">
             <li><a class="dropdown-button" href="#!" data-target="dropdown2">Somos<i class="material-icons right">arrow_drop_down</i></a></li>
-            <li><a class="dropdown-button" href="#!" data-target="dropdown3">Congreso<i class="material-icons right">arrow_drop_down</i></a></li>
+            <li><a class="dropdown-button" href="#!" data-target="dropdown3">Eventos<i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a class="dropdown-button" href="#!" data-target="dropdown4">Virtual<i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a class="dropdown-button" href="#!" data-target="dropdown5">Contacto<i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a href="musica.html">Música</a></li>
@@ -90,14 +90,14 @@
             <!--<li><a href="organiza.html">&#x2022; Organización</a></li>-->
             <li><a href="../es/comunidad.html">&#x2022; Comunidad</a></li>
             <li><a href="../es/musica.html">&#x2022; Música</a></li>
-            <li><a href="">CONGRESO:</a></li>
+            <li><a href="">Eventos:</a></li>
             <li><a href="../es/descripcion.html">&#x2022; Descripción</a></li>
             <li><a href="../es/ciudad.html">&#x2022; Ciudad</a></li>
-            <li><a href="../es/cronograma.html">&#x2022; Cronograma</a></li>
+            <!--<li><a href="../es/cronograma.html">&#x2022; Cronograma</a></li>
             <li><a href="../es/charlas.html">&#x2022; Charlas</a></li>
             <li><a href="../es/poster.html">&#x2022; Posters</a></li>
             <li><a href="../es/taller.html">&#x2022; Taller</a></li>
-            <li><a href="../es/becas.html">&#x2022; Becas</a></li>
+            <li><a href="../es/becas.html">&#x2022; Becas</a></li>-->
             <li><a href="">VIRTUAL:</a></li>
             <li><a href="../es/seminario.html">&#x2022; Seminario</a></li>
             <!--<li><a href="../es/hackaton.html">&#x2022; Hackatón</a></li>-->
