--- a/en/about.html
+++ b/en/about.html
@@ -51,11 +51,11 @@
         <li><a href=""></a></li>
         <li><a href="../en/about.html">About</a></li>
         <li><a href="../en/city.html">City</a></li>
-        <li><a href="../en/schedule.html">Schedule</a></li>
+        <!--<li><a href="../en/schedule.html">Schedule</a></li>
         <li><a href="../en/talks.html">Talks</a></li>
         <li><a href="../en/poster_en.html">Posters</a></li>
         <li><a href="../en/workshop.html">Workshop</a></li>
-        <li><a href="../en/scholarship.html">Scholarship</a></li>
+        <li><a href="../en/scholarship.html">Scholarship</a></li>-->
     </ul>
 
     <ul id="dropdown4" class="dropdown-content">
@@ -75,7 +75,7 @@
         <div class="nav-wrapper container"><a id="logo-container" href="../en/index.html" class="brand-logo"><em>Bayes</em></a>
             <ul class="right hide-on-med-and-down">
             <li><a class="dropdown-button" href="#!" data-target="dropdown2">We are<i class="material-icons right">arrow_drop_down</i></a></li>
-            <li><a class="dropdown-button" href="#!" data-target="dropdown3">Congress<i class="material-icons right">arrow_drop_down</i></a></li>
+            <li><a class="dropdown-button" href="#!" data-target="dropdown3">Events<i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a class="dropdown-button" href="#!" data-target="dropdown4">Virtual<i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a class="dropdown-button" href="#!" data-target="dropdown5">Contact<i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a href="../en/music.html">Music</a></li>
@@ -92,14 +92,14 @@
         <!--<li><a href="../en/organiza_en.html">&#x2022; Organizers</a></li>-->
         <li><a href="../en/community.html">&#x2022; Community</a></li>
         <li><a href="../en/music.html">&#x2022; Music</a></li>
-        <li><a href="">CONGRESS:</a></li>
+        <li><a href="">Events:</a></li>
         <li><a href="../en/about.html">&#x2022; About</a></li>
         <li><a href="../en/city.html">&#x2022; City</a></li>
-        <li><a href="../en/schedule.html">&#x2022; Schedule</a></li>
+        <!--<li><a href="../en/schedule.html">&#x2022; Schedule</a></li>
         <li><a href="../en/talks.html">&#x2022; Talks</a></li>
         <li><a href="../en/poster.html">&#x2022; Posters</a></li>
         <li><a href="../en/workshop.html">&#x2022; Workshop</a></li>
-        <li><a href="../en/scholarship.html">&#x2022; Scholarship</a></li>
+        <li><a href="../en/scholarship.html">&#x2022; Scholarship</a></li>-->
         <li><a href="">VIRTUAL:</a></li>
         <li><a href="../en/seminar.html">&#x2022; Seminar</a></li>
         <!--<li><a href="../en/hackathon.html">&#x2022; Hackathon</a></li>-->
@@ -150,7 +150,7 @@
 
             <div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1">
-                <img class="responsive-img" src="img/congreso2023/01.jpg" alt="Figure 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/01.jpg" alt="Figure 1">
                 </div>
             </div>
 
@@ -158,15 +158,23 @@
 
             <div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1">
-                <img class="responsive-img" src="img/congreso2023/02.jpg" alt="Figure 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/02.jpg" alt="Figure 1">
                 </div>
             </div>
 
-            <br>
+            <!--<br>
 
             <div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1">
-                <img class="responsive-img" src="img/congreso2023/03.jpg" alt="Figure 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/03.jpg" alt="Figure 1">
+                </div>
+            </div>-->
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/04.jpg" alt="Figure 1">
                 </div>
             </div>
 
@@ -174,7 +182,7 @@
 
             <div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="img/congreso2023/04.jpg" alt="Figure 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/05.jpeg" alt="Figure 1">
                 </div>
             </div>
 
@@ -182,7 +190,7 @@
 
             <div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="img/congreso2023/05.jpeg" alt="Figure 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/21.jpg" alt="Figure 1">
                 </div>
             </div>
 
@@ -190,7 +198,7 @@
 
             <div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="img/congreso2023/21.jpg" alt="Figure 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/07.jpg" alt="Figure 1">
                 </div>
             </div>
 
@@ -198,7 +206,7 @@
 
             <div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="img/congreso2023/07.jpg" alt="Figure 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/10.jpg" alt="Figure 1">
                 </div>
             </div>
 
@@ -206,7 +214,7 @@
 
             <div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="img/congreso2023/10.jpg" alt="Figure 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/13.jpg" alt="Figure 1">
                 </div>
             </div>
 
@@ -214,7 +222,7 @@
 
             <div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="img/congreso2023/13.jpg" alt="Figure 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/27.jpg" alt="Figure 1">
                 </div>
             </div>
 
@@ -222,7 +230,7 @@
 
             <div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="img/congreso2023/27.jpg" alt="Figure 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/31.jpg" alt="Figure 1">
                 </div>
             </div>
 
@@ -230,15 +238,7 @@
 
             <div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="img/congreso2023/31.jpg" alt="Figure 1">
-                </div>
-            </div>
-
-            <br>
-
-            <div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="img/congreso2023/39.jpg" alt="Figure 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/39.jpg" alt="Figure 1">
                 </div>
             </div>
 
