--- a/es/descripcion.html
+++ b/es/descripcion.html
@@ -1,117 +1,121 @@
 <!DOCTYPE html>
   <html>
-    <!-- BEGIN HEADER -->
-    <head>
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="../css/materialize.min.css"  media="screen,projection"/>
-      <title>Bayes</title>
-      <!--Let browser know website is optimized for mobile-->
-      <link rel="stylesheet" href="../css/cronograma.css">
-      <link rel="stylesheet" href="../css/base.css">
-      <link rel="stylesheet" href="../css/others.css">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <meta charset="utf-8">
-      <!--Latex Mode-->
-      <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-      <!--One way to display figures side by side-->
-      <style>
-        .figcontainer {
-        display: flex;
-        justify-content: center;
-        }
+<!-- BEGIN HEADER -->
+<head>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="../css/materialize.min.css"  media="screen,projection"/>
+    <title>Bayes</title>
+    <!--Let browser know website is optimized for mobile-->
+    <link rel="stylesheet" href="../css/cronograma.css">
+    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/others.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="utf-8">
+    <!--Latex Mode-->
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+    <!--One way to display figures side by side-->
+    <style>
+    .figcontainer {
+    display: flex;
+    justify-content: center;
+    }
 
-        .figure {
-        margin: 10px;
-        }
-      </style>
-      </head>
+    .figure {
+    margin: 10px;
+    }
+    </style>
+</head>
     <body>
-        <ul id="dropdown0" class="dropdown-content">
-            <li><a href=""></a></li>
-            <li><a href="../es/index.html">Castellano</a></li>
-            <li><a href="../en/index.html">English</a></li>
-        </ul>
-        <ul id="dropdown1" class="dropdown-content">
-            <li><a href=""></a></li>
-            <li><a href="../es/index.html">Castellano</a></li>
-            <li><a href="../en/index.html">English</a></li>
-        </ul>
-        <ul id="dropdown2" class="dropdown-content">
-            <li><a href=""></a></li>
-            <li><a href="../es/plural.html">Plural</a></li>
-            <!--<li><a href="../es/organiza.html">Organización</a></li>-->
-            <li><a href="../es/comunidad.html">Comunidad</a></li>
-        </ul>
+    <ul id="dropdown0" class="dropdown-content">
+        <li><a href=""></a></li>
+        <li><a href="../es/index.html">Castellano</a></li>
+        <li><a href="../en/index.html">English</a></li>
+    </ul>
+    <ul id="dropdown1" class="dropdown-content">
+        <li><a href=""></a></li>
+        <li><a href="../es/index.html">Castellano</a></li>
+        <li><a href="../en/index.html">English</a></li>
+    </ul>
+    <ul id="dropdown2" class="dropdown-content">
+        <li><a href=""></a></li>
+        <li><a href="../es/plural.html">Plural</a></li>
+        <!--<li><a href="../es/organiza.html">Organización</a></li>-->
+        <li><a href="../es/comunidad.html">Comunidad</a></li>
+    </ul>
 
-        <ul id="dropdown3" class="dropdown-content">
-            <li><a href=""></a></li>
-            <li><a href="../es/descripcion.html">Descripción</a></li>
-            <li><a href="../es/ciudad.html">Ciudad</a></li>
-            <li><a href="../es/cronograma.html">Cronograma</a></li>
-            <li><a href="../es/charlas.html">Charlas</a></li>
-            <li><a href="../es/poster.html">Posters</a></li>
-            <li><a href="../es/taller.html">Taller</a></li>
-            <li><a href="../es/becas.html">Becas</a></li>
+    <ul id="dropdown3" class="dropdown-content">
+        <li><a href=""></a></li>
+        <li><a href="../es/descripcion.html">Descripción</a></li>
+        <li><a href="../es/ciudad.html">Ciudad</a></li>
+        <!--<li><a href="../es/cronograma.html">Cronograma</a></li>
+        <li><a href="../es/charlas.html">Charlas</a></li>
+        <li><a href="../es/poster.html">Posters</a></li>
+        <li><a href="../es/taller.html">Taller</a></li>
+        <li><a href="../es/becas.html">Becas</a></li>-->
+    </ul>
+
+    <ul id="dropdown4" class="dropdown-content">
+        <li><a href=""></a></li>
+        <li><a href="../es/seminario.html">Seminario</a></li>
+        <!--<li><a href="../es/hackaton.html">Hackatón</a></li>-->
+    </ul>
+
+    <ul id="dropdown5" class="dropdown-content">
+        <li><a href=""></a></li>
+        <li><a href="../es/redes.html">Redes</a></li>
+        <li><a href="../es/conducta.html">Conducta</a></li>
+        <li><a href="../es/faq.html">FAQ</a></li>
+    </ul>
+
+    <nav class="blue-grey" role="navigation" style="position:fixed">
+        <div class="nav-wrapper container"><a id="logo-container" href="../es/index.html" class="brand-logo"><em>Bayes</em></a>
+        <ul class="right hide-on-med-and-down">
+            <li><a class="dropdown-button" href="#!" data-target="dropdown2">Somos<i class="material-icons right">arrow_drop_down</i></a></li>
+            <li><a class="dropdown-button" href="#!" data-target="dropdown3">Eventos<i class="material-icons right">arrow_drop_down</i></a></li>
+            <li><a class="dropdown-button" href="#!" data-target="dropdown4">Virtual<i class="material-icons right">arrow_drop_down</i></a></li>
+            <li><a class="dropdown-button" href="#!" data-target="dropdown5">Contacto<i class="material-icons right">arrow_drop_down</i></a></li>
+            <li><a href="musica.html">Música</a></li>
+            <li><a class="dropdown-button" href="#!" data-target="dropdown0"><i class="fa fa-language"></i></a></li>
         </ul>
+    </nav>
 
-        <ul id="dropdown4" class="dropdown-content">
-            <li><a href=""></a></li>
-            <li><a href="../es/seminario.html">Seminario</a></li>
-            <!--<li><a href="../es/hackaton.html">Hackatón</a></li>-->
+    <nav class="blue-grey" role="navigation">
+        <ul id="nav-mobile" class="sidenav">
+            <li><a class="dropdown-button" href="#!" data-target="dropdown1"><i class="fa fa-language"></i></a></li>
+            <li><a href="../es/index.html">Bayes Plurinacional</a></li>
+            <li><a href="">SOMOS:</a></li>
+            <li><a href="../es/plural.html">&#x2022; Plural</a></li>
+            <!--<li><a href="organiza.html">&#x2022; Organización</a></li>-->
+            <li><a href="../es/comunidad.html">&#x2022; Comunidad</a></li>
+            <li><a href="../es/musica.html">&#x2022; Música</a></li>
+            <li><a href="">Eventos:</a></li>
+            <li><a href="../es/descripcion.html">&#x2022; Descripción</a></li>
+            <li><a href="../es/ciudad.html">&#x2022; Ciudad</a></li>
+            <!--<li><a href="../es/cronograma.html">&#x2022; Cronograma</a></li>
+            <li><a href="../es/charlas.html">&#x2022; Charlas</a></li>
+            <li><a href="../es/poster.html">&#x2022; Posters</a></li>
+            <li><a href="../es/taller.html">&#x2022; Taller</a></li>
+            <li><a href="../es/becas.html">&#x2022; Becas</a></li>-->
+            <li><a href="">VIRTUAL:</a></li>
+            <li><a href="../es/seminario.html">&#x2022; Seminario</a></li>
+            <!--<li><a href="../es/hackaton.html">&#x2022; Hackatón</a></li>-->
+            <li><a href="">CONTACTO:</a></li>
+            <li><a href="../es/redes.html">&#x2022; Redes</a></li>
+            <li><a href="../es/conducta.html">&#x2022; Conducta</a></li>
+            <li><a href="../es/faq.html">&#x2022; FAQ</a></li>
         </ul>
+        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        </div>
+    </nav>
+    <!-- END HEADER -->
 
-        <ul id="dropdown5" class="dropdown-content">
-            <li><a href=""></a></li>
-            <li><a href="../es/redes.html">Redes</a></li>
-            <li><a href="../es/conducta.html">Conducta</a></li>
-            <li><a href="../es/faq.html">FAQ</a></li>
-        </ul>
 
-        <nav class="blue-grey" role="navigation" style="position:fixed">
-            <div class="nav-wrapper container"><a id="logo-container" href="../es/index.html" class="brand-logo"><em>Bayes</em></a>
-            <ul class="right hide-on-med-and-down">
-                <li><a class="dropdown-button" href="#!" data-target="dropdown2">Somos<i class="material-icons right">arrow_drop_down</i></a></li>
-                <li><a class="dropdown-button" href="#!" data-target="dropdown3">Congreso<i class="material-icons right">arrow_drop_down</i></a></li>
-                <li><a class="dropdown-button" href="#!" data-target="dropdown4">Virtual<i class="material-icons right">arrow_drop_down</i></a></li>
-                <li><a class="dropdown-button" href="#!" data-target="dropdown5">Contacto<i class="material-icons right">arrow_drop_down</i></a></li>
-                <li><a href="musica.html">Música</a></li>
-                <li><a class="dropdown-button" href="#!" data-target="dropdown0"><i class="fa fa-language"></i></a></li>
-            </ul>
-        </nav>
 
-        <nav class="blue-grey" role="navigation">
-            <ul id="nav-mobile" class="sidenav">
-                <li><a class="dropdown-button" href="#!" data-target="dropdown1"><i class="fa fa-language"></i></a></li>
-                <li><a href="../es/index.html">Bayes Plurinacional</a></li>
-                <li><a href="">SOMOS:</a></li>
-                <li><a href="../es/plural.html">&#x2022; Plural</a></li>
-                <!--<li><a href="organiza.html">&#x2022; Organización</a></li>-->
-                <li><a href="../es/comunidad.html">&#x2022; Comunidad</a></li>
-                <li><a href="../es/musica.html">&#x2022; Música</a></li>
-                <li><a href="">CONGRESO:</a></li>
-                <li><a href="../es/descripcion.html">&#x2022; Descripción</a></li>
-                <li><a href="../es/ciudad.html">&#x2022; Ciudad</a></li>
-                <li><a href="../es/cronograma.html">&#x2022; Cronograma</a></li>
-                <li><a href="../es/charlas.html">&#x2022; Charlas</a></li>
-                <li><a href="../es/poster.html">&#x2022; Posters</a></li>
-                <li><a href="../es/taller.html">&#x2022; Taller</a></li>
-                <li><a href="../es/becas.html">&#x2022; Becas</a></li>
-                <li><a href="">VIRTUAL:</a></li>
-                <li><a href="../es/seminario.html">&#x2022; Seminario</a></li>
-                <!--<li><a href="../es/hackaton.html">&#x2022; Hackatón</a></li>-->
-                <li><a href="">CONTACTO:</a></li>
-                <li><a href="../es/redes.html">&#x2022; Redes</a></li>
-                <li><a href="../es/conducta.html">&#x2022; Conducta</a></li>
-                <li><a href="../es/faq.html">&#x2022; FAQ</a></li>
-            </ul>
-            <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-            </div>
-        </nav>
-        <!-- END HEADER -->
+
 
 
 
@@ -183,7 +187,7 @@
 
             <div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1">
-                <img class="responsive-img" src="img/congreso2023/01.jpg" alt="Figure 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/01.jpg" alt="Figure 1">
                 </div>
             </div>
 
@@ -191,15 +195,23 @@
 
             <div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1">
-                <img class="responsive-img" src="img/congreso2023/02.jpg" alt="Figure 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/02.jpg" alt="Figure 1">
                 </div>
             </div>
 
-            <br>
+            <!--<br>
 
             <div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1">
-                <img class="responsive-img" src="img/congreso2023/03.jpg" alt="Figure 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/03.jpg" alt="Figure 1">
+                </div>
+            </div>-->
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/04.jpg" alt="Figure 1">
                 </div>
             </div>
 
@@ -207,7 +219,7 @@
 
             <div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="img/congreso2023/04.jpg" alt="Figure 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/05.jpeg" alt="Figure 1">
                 </div>
             </div>
 
@@ -215,7 +227,7 @@
 
             <div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="img/congreso2023/05.jpeg" alt="Figure 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/21.jpg" alt="Figure 1">
                 </div>
             </div>
 
@@ -223,7 +235,7 @@
 
             <div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="img/congreso2023/21.jpg" alt="Figure 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/07.jpg" alt="Figure 1">
                 </div>
             </div>
 
@@ -231,7 +243,7 @@
 
             <div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="img/congreso2023/07.jpg" alt="Figure 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/10.jpg" alt="Figure 1">
                 </div>
             </div>
 
@@ -239,7 +251,7 @@
 
             <div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="img/congreso2023/10.jpg" alt="Figure 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/13.jpg" alt="Figure 1">
                 </div>
             </div>
 
@@ -247,7 +259,7 @@
 
             <div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="img/congreso2023/13.jpg" alt="Figure 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/27.jpg" alt="Figure 1">
                 </div>
             </div>
 
@@ -255,7 +267,7 @@
 
             <div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="img/congreso2023/27.jpg" alt="Figure 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/31.jpg" alt="Figure 1">
                 </div>
             </div>
 
@@ -263,15 +275,7 @@
 
             <div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="img/congreso2023/31.jpg" alt="Figure 1">
-                </div>
-            </div>
-
-            <br>
-
-            <div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="img/congreso2023/39.jpg" alt="Figure 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/39.jpg" alt="Figure 1">
                 </div>
             </div>
 
