--- a/es/taller.html
+++ b/es/taller.html
@@ -1,5 +1,18 @@
 <!DOCTYPE html>
   <html>
+    <head>
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+      <title>Bayes</title>
+      <link rel="icon" href="logos/favicon.png" type="image/x-icon">
+      <!--Let browser know website is optimized for mobile-->
+      <link rel="stylesheet" href="css/others.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    </head>
+
+    <body>
 <!-- BEGIN HEADER -->
 <head>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
@@ -143,68 +156,31 @@
 
 
 
-
-
-
-
-
-
-
-
         <div class="section no-pad-bot" id="index-banner">
             <div class="container">
             </div>
         </div>
 
         <div class="container">
-            <div class="section" style="text-align: justify;">
-
-                <h4 class="header col s12 light">
-                Bayes Plurinacional
-                <h4>
-
-
-                <h6 class="header col s12 light">
-                La palabra Plurinacional representa en Sudamérica la coexistencia de nuestras diversidades culturales locales.
-                Esta visión es especialmente adecuada para una comunidad que trabaja con métodos bayesianos porque, a diferencia de los procedimientos ad-hoc que seleccionan una única hipótesis (por ejemplo, por máxima verosimilitud), la aplicación estricta de las reglas de probabilidad (enfoque bayesiano) nos obliga a considerar todas y cada una de las hipótesis.
-                Así como los métodos bayesianos adaptan la incertidumbre creyendo al mismo tiempo en hipótesis mutuamente contradictorias, una sociedad plurinacional se adapta a la vida mediante la coexistencia de nuestras diversidades.
-                </h6>
-
-                <h6 class="header col s12 light">
-                La ciencia tiene pretensión de verdad: alcanzar acuerdos intersubjetivos con validez universal.
-                Las ciencias formales (matemática, lógica) alcanzan estos acuerdos derivando teoremas dentro de sistemas axiomáticos cerrados.
-                Sin embargo, las ciencias empíricas (desde la física hasta las ciencias sociales) deben validar sus proposiciones en sistemas abiertos que contienen siempre algún grado de incertidumbre.
-                ¿Es posible entonces alcanzar acuerdos intersubjetivos ("verdades") en las ciencias empíricas en las que es inevitable decir "no sé"?
-                Sí.
-                Podemos evitar mentir: maximizando incertidumbre (no afirmar más de lo que se sabe) dada la información disponible (sin ocultar lo que sí se sabe).
-                </h6>
-
-
-                <h6 class="header col s12 light">
-                Las reglas de la probabilidad se conocen desde finales del siglo 18 y desde entonces se las ha adoptado como sistema de razonamiento en todas las ciencias empíricas.
-                Ellas son conceptualmente intuitivas: preservar la creencia previa que sigue siendo compatible con los datos (regla del producto) y predecir con la contribución de todas las hipótesis (regla de la suma).
-                Si bien luego de todo este tiempo no se ha propuesto nada mejor en lo práctico, el costo computacional asociados a la evaluación de todo el espacio de hipótesis ha limitado en los hechos su campo de aplicación.
-                Por eso, con el tiempo se fueron desarrollando soluciones parciales, como la física estadística en el siglo 19 y el enfoque frecuentista en el siglo 20.
-                Solo cuando se produce el enorme crecimiento en la capacidad de cómputo, en las vísperas del siglo 21, comienza por primera vez a ser posible aplicar de forma estricta las reglas de la probabilidad en todos los campos de la ciencia.
-                </h6>
-
-                <h6 class="header col s12 light">
-                Luego de superados estos obstáculos, la inercia histórica aparece ahora como una de las limitaciones principales.
-                Si bien en la actualidad el crecimiento del enfoque bayesiano es un fenómeno mundial que se está acelerando, su desarrollo sigue siendo incipiente.
-                A pesar de que el conocimientos bajo incertidumbre sea "plural y condicional", el lenguaje tradicional de las ciencias empíricas se presenta como "singular y definitvo".
-                Del mismo modo que seleccionar una única hipótesis tiene consecuencias negativas conocidas en probabilidad (overfitting), la masiva pérdida de la diversidad cultural provocada por la imposición de un único tipo de sociedad durante la colonial-modernidad está tenido consecuencia ecológicas que la ciencia metropolitana no es capaz de compensar.
-                </h6>
-
-                <h6 class="header col s12 light">
-                El objetivo de Bayes Plurinacional es fortalecer las comunidades bayesianas de latinoamericana, el caribe y los pueblos del sur global.
-                La transición científica y filosófica va a ocurrir.
-                La ventaja de la pluralidad es un hecho para el conocimiento y la vida.
-                </h6>
-
-
-
-
-                </div>
+<div class="section" style="text-align: justify;">
+              <h4>Taller "Verdades empíricas"</h4>
+              <br>
+              <img class="responsive-img" src="img/curso/curso-1.png" border="1" alt="Tapa" style="width: 100%; border:1px solid #000000; padding:2px; margin:2px;"><br>
+              <img class="responsive-img" src="img/curso/curso-0.png" alt="Tapa" style="width: 100%; border:1px solid #000000; padding:2px; margin:2px;">
+              <br>
+              <img class="responsive-img" src="img/curso/curso-2.png" alt="Tapa" style="width: 100%; border:1px solid #000000; padding:2px; margin:2px;">
+              <br>
+              <img class="responsive-img" src="img/curso/curso-3.png" alt="Tapa" style="width: 100%; border:1px solid #000000; padding:2px; margin:2px;">
+              <br>
+              <img class="responsive-img" src="img/curso/curso-4.png" alt="Tapa" style="width: 100%; border:1px solid #000000; padding:2px; margin:2px;"><br>
+              <img class="responsive-img" src="img/curso/curso-5.png" alt="Tapa" style="width: 100%; border:1px solid #000000; padding:2px; margin:2px;"><br>
+              <img class="responsive-img" src="img/curso/curso-6.png" alt="Tapa" style="width: 100%; border:1px solid #000000; padding:2px; margin:2px;"><br>
+              <img class="responsive-img" src="img/curso/curso-7.png" alt="Tapa" style="width: 100%; border:1px solid #000000; padding:2px; margin:2px;"><br>
+              <img class="responsive-img" src="img/curso/curso-8.png" alt="Tapa" style="width: 100%; border:1px solid #000000; padding:2px; margin:2px;"><br>
+              <img class="responsive-img" src="img/curso/curso-9.png" alt="Tapa" style="width: 100%; border:1px solid #000000; padding:2px; margin:2px;"><br>
+              <img class="responsive-img" src="img/curso/curso-10.png" alt="Tapa" style="width: 100%; border:1px solid #000000; padding:2px; margin:2px;"><br>
+              <img class="responsive-img" src="img/curso/curso-11.png" alt="Tapa" style="width: 100%; border:1px solid #000000; padding:2px; margin:2px;"><br>
+              </div>
         </div>
 
         <p class="bottom-blank"><!--Vertical spacer--></p>
@@ -240,5 +216,21 @@
           );
       </script>
       <!-- END FOOTER -->
+
+
+        <!--JavaScript at end of body for optimized loading-->
+        <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script src="js/materialize.js"></script>
+        <script src="js/init.js"></script>
+        <script>
+            $('.dropdown-button').dropdown({
+                inDuration: 300,
+                outDuration: 225,
+                constrain_width: false, // Does not change width of dropdown to that of the activator
+                gutter: 0, // Spacing from edge
+                alignment: 'left' // Displays dropdown with edge aligned to the left of button
+                }
+            );
+        </script>
     </body>
   </html>
