--- a/navega_en.html
+++ b/navega_en.html
@@ -49,11 +49,11 @@
         <li><a href=""></a></li>
         <li><a href="../en/about.html">About</a></li>
         <li><a href="../en/city.html">City</a></li>
-        <li><a href="../en/schedule.html">Schedule</a></li>
+        <!--<li><a href="../en/schedule.html">Schedule</a></li>
         <li><a href="../en/talks.html">Talks</a></li>
         <li><a href="../en/poster_en.html">Posters</a></li>
         <li><a href="../en/workshop.html">Workshop</a></li>
-        <li><a href="../en/scholarship.html">Scholarship</a></li>
+        <li><a href="../en/scholarship.html">Scholarship</a></li>-->
     </ul>
 
     <ul id="dropdown4" class="dropdown-content">
@@ -73,7 +73,7 @@
         <div class="nav-wrapper container"><a id="logo-container" href="../en/index.html" class="brand-logo"><em>Bayes</em></a>
             <ul class="right hide-on-med-and-down">
             <li><a class="dropdown-button" href="#!" data-target="dropdown2">We are<i class="material-icons right">arrow_drop_down</i></a></li>
-            <li><a class="dropdown-button" href="#!" data-target="dropdown3">Congress<i class="material-icons right">arrow_drop_down</i></a></li>
+            <li><a class="dropdown-button" href="#!" data-target="dropdown3">Events<i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a class="dropdown-button" href="#!" data-target="dropdown4">Virtual<i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a class="dropdown-button" href="#!" data-target="dropdown5">Contact<i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a href="../en/music.html">Music</a></li>
@@ -90,14 +90,14 @@
         <!--<li><a href="../en/organiza_en.html">&#x2022; Organizers</a></li>-->
         <li><a href="../en/community.html">&#x2022; Community</a></li>
         <li><a href="../en/music.html">&#x2022; Music</a></li>
-        <li><a href="">CONGRESS:</a></li>
+        <li><a href="">Events:</a></li>
         <li><a href="../en/about.html">&#x2022; About</a></li>
         <li><a href="../en/city.html">&#x2022; City</a></li>
-        <li><a href="../en/schedule.html">&#x2022; Schedule</a></li>
+        <!--<li><a href="../en/schedule.html">&#x2022; Schedule</a></li>
         <li><a href="../en/talks.html">&#x2022; Talks</a></li>
         <li><a href="../en/poster.html">&#x2022; Posters</a></li>
         <li><a href="../en/workshop.html">&#x2022; Workshop</a></li>
-        <li><a href="../en/scholarship.html">&#x2022; Scholarship</a></li>
+        <li><a href="../en/scholarship.html">&#x2022; Scholarship</a></li>-->
         <li><a href="">VIRTUAL:</a></li>
         <li><a href="../en/seminar.html">&#x2022; Seminar</a></li>
         <!--<li><a href="../en/hackathon.html">&#x2022; Hackathon</a></li>-->
